[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/font/alagard.font.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/scene/Menus/Escape_Menu.gd" type="Script" id=2]

[node name="Escape Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -958.0
margin_bottom = -524.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_Buttons" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Menu_Buttons"]
margin_right = 66.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "Exit"
flat = true

[node name="Options" type="Button" parent="Menu_Buttons"]
margin_top = 25.0
margin_right = 66.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 1 )
text = "Options"
flat = true

[node name="Resume" type="Button" parent="Menu_Buttons"]
margin_top = 50.0
margin_right = 66.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 1 )
text = "Hide"
flat = true

[connection signal="pressed" from="Menu_Buttons/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Menu_Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu_Buttons/Resume" to="." method="_on_Resume_pressed"]
